# liftover

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
liftover/: __init__.py  chain.py  chain_file.py  chain_file.pyx  download_file.py  header.py  lifter.py  liftover.py  target.py
src/: chain.cpp  chain.h  chain_file.cpp  chain_file.h  headers.cpp  headers.h  main.cpp  target.cpp  target.h  utils.cpp  utils.h
src/liftover/: __init__.py  chain_file.pyx  download_file.py  lifter.py
tests/: test_chain_file.py  test_invalid_chain_file.py
