[build-system]
requires = ["cython", "setuptools >= 40.6.0", "wheel"]

[project]
name = 'liftover'
version = '1.4.0'
description = 'Package for converting between genome build coordinates'
readme = 'README.md'
requires-python = '>=3.8'
authors = [
    {name = "Jeremy McRae", email = 'jmcrae@illumina.com'},
]

dependencies = [
    'urllib3',
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

[tool.setuptools]
packages = [
    'liftover',
]

[project.urls]
homepage = 'https://github.com/jeremymcrae/liftover'
